# Mini_Data_Platform

./: .gitignore  CMakeLists.txt  Makefile  README.md  minidb  minidb_tests
include/: btree.h  executor.h  llm_copilot.h  memory_pool.h  parser.h  schema.h  storage.h
src/: btree.cpp  executor.cpp  llm_copilot.cpp  main.cpp  memory_pool.cpp  parser.cpp  schema.cpp  storage.cpp
tests/: test_main.cpp
